--- a/2019Labs/ProactiveSecurityCompliance/Ansible/patching-playbooks/roles/ansible-role-scap-client/tasks/main.yaml
+++ b/2019Labs/ProactiveSecurityCompliance/Ansible/patching-playbooks/roles/ansible-role-scap-client/tasks/main.yaml
@@ -49,7 +49,7 @@
     body_format: json
     validate_certs: False
   register: tailoringfiles
-  when: item.tailoring_file_id > 0
+  when: item.tailoring_file_id is defined and item.tailoring_file_id > 0
   loop: "{{ policy }}"
 
 - name: Build scap content parameters
