--- a/2019Labs/ProactiveSecurityCompliance/Ansible/patching-playbooks/roles/ansible-role-scap-client/tasks/main.yaml
+++ b/2019Labs/ProactiveSecurityCompliance/Ansible/patching-playbooks/roles/ansible-role-scap-client/tasks/main.yaml
@@ -76,7 +76,7 @@
     name: "Openscap Execution"
     cron_file: 'foreman_openscap_client'
     job: '/usr/bin/foreman_scap_client {{policy.id}} > /dev/null'
-    weekday: "{{crontab_weekdays}}"
-    hour: "{{crontab_hour}}"
-    minute: "{{crontab_minute}}"
+    weekday: "{{ ansible_facts[policy][weekday] }}"
+    hour: "1"
+    minute: "0"
     user: root
